# allocator

./: CMakeLists.txt
include/-0/: allocator_functions.h
src/: allocator.c
